--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="blue">#0078E3</color>
+    <color name="header_bg">#1A9DF5</color>
     <color name="mustard">#FF7033</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
