--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -2,7 +2,7 @@
 <defaultsMap>
     <entry>
         <key>aviation_edge_key</key>
-        <value>1f34c9-0a1eb5</value>
+        <value>c82346-629474</value>
     </entry>
     <entry>
         <key>radar_box_key</key>
